# corners

./: .clang-format  .gitignore  README.MD  meson.build
data/: corners.gresource.xml.in  corners.gschema.xml.in  meson.build
data/ui/: corners-window.ui
src/: corners-application.cpp  corners-application.hpp  corners-corner.cpp  corners-corner.hpp  corners-window.cpp  corners-window.hpp  meson.build
